--- a/oCal.ui
+++ b/oCal.ui
@@ -432,6 +432,9 @@
          <pointsize>20</pointsize>
         </font>
        </property>
+       <property name="frame">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item row="5" column="0">
