--- a/oCal.ui
+++ b/oCal.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1010</width>
-    <height>1080</height>
+    <width>902</width>
+    <height>703</height>
    </rect>
   </property>
   <property name="font">
@@ -37,12 +37,15 @@
     <property name="text">
      <string>Options Calculator</string>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
    </widget>
    <widget class="QPushButton" name="pushButtonPremiumC">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>500</y>
+      <x>40</x>
+      <y>390</y>
       <width>321</width>
       <height>41</height>
      </rect>
@@ -60,8 +63,8 @@
    <widget class="QPushButton" name="pushButtonVolatilityC">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>560</y>
+      <x>40</x>
+      <y>450</y>
       <width>321</width>
       <height>40</height>
      </rect>
@@ -79,8 +82,8 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>110</y>
+      <x>40</x>
+      <y>70</y>
       <width>321</width>
       <height>261</height>
      </rect>
@@ -177,8 +180,8 @@
    <widget class="QPushButton" name="pushButtonPremiumP">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>620</y>
+      <x>40</x>
+      <y>510</y>
       <width>321</width>
       <height>40</height>
      </rect>
@@ -197,8 +200,8 @@
    <widget class="QPushButton" name="pushButtonVolatilityP">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>680</y>
+      <x>40</x>
+      <y>570</y>
       <width>323</width>
       <height>40</height>
      </rect>
@@ -216,8 +219,8 @@
    <widget class="QPushButton" name="pushButtonClear">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>760</y>
+      <x>450</x>
+      <y>580</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -235,8 +238,8 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>110</y>
+      <x>400</x>
+      <y>70</y>
       <width>471</width>
       <height>481</height>
      </rect>
@@ -421,7 +424,7 @@
         </font>
        </property>
        <property name="text">
-        <string>$ Premium Input</string>
+        <string>Premium Input:  $</string>
        </property>
       </widget>
      </item>
@@ -445,7 +448,7 @@
         </font>
        </property>
        <property name="text">
-        <string>$ Current Price:</string>
+        <string>Current Price:  $</string>
        </property>
       </widget>
      </item>
@@ -466,7 +469,7 @@
         </font>
        </property>
        <property name="text">
-        <string>$ Strike Price:</string>
+        <string>Strike Price:  $</string>
        </property>
       </widget>
      </item>
@@ -487,7 +490,7 @@
         </font>
        </property>
        <property name="text">
-        <string>% Volatility Input:</string>
+        <string>Volatility Input:  %</string>
        </property>
       </widget>
      </item>
@@ -517,7 +520,7 @@
         </font>
        </property>
        <property name="text">
-        <string>% Risk-Free Rate:</string>
+        <string>Risk-Free Rate:  %</string>
        </property>
       </widget>
      </item>
@@ -601,7 +604,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1010</width>
+     <width>902</width>
      <height>24</height>
     </rect>
    </property>
